[package]
name = "mdb-rust-session-03"
version = "0.1.0"
edition = "2024"
exclude = ["fixtures/"]

[dependencies]
anyhow = "1.0.99"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
toml = { version = "0.9.5", features = ["serde"] }
